# jetset

./: .gitignore  CONTEXT.md  HARDWARE.md  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/features/20250610-2316-nearby-flights/: prd.html  prd.md  tasks.html  tasks.md
scripts/: blue-current.py  blue-hold.py  content-sweep.sh  diag-logo.py  download_logos.py  hold-sweep.sh  jetset.service  jetset.service.template  logo-gallery.py  mux-sweep.sh  panel-colors.py  panel-confirm.py  panel-content.py  panel-diag.sh  panel-hbands.py  panel-mux.py  panel-rgbseq.py  probe-card.py  probe-color.py  probe-geo.py  probe-hold.py  probe-logo.py  probe-scan.py  probe-sparse.py  probe-text.py  py-panel-test.py  rgbseq-sweep.sh  route-compare.py  save_fixtures.py  setup-pi.sh
src/jetset/: __init__.py  __main__.py  app.py  backend.py  config.py  display.py  fetcher.py  geo.py  http.py  main.py  models.py  renderer.py
tests/: test_backend.py  test_cache.py  test_config.py  test_display.py  test_download_logos.py  test_fetcher.py  test_geo.py  test_main.py  test_models.py  test_renderer.py  test_save_fixtures.py
tests/fixtures/: adsblol_response.json  aeroapi_response.json  airlabs_response.json
