[project]
name = "jetset"
version = "0.1.0"
description = "Jetset — Live flight tracking LED display"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rgbmatrixemulator>=0.18.1",
]

[project.scripts]
jetset = "jetset.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
