[project]
name = "jetset"
version = "0.1.0"
description = "Jetset — Live flight tracking LED display"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rgbmatrixemulator>=0.18.1",
    "pyyaml>=6",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "pillow>=11",
]

[project.scripts]
jetset = "jetset.__main__:main"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jetset"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:tornado.*",
    "ignore::DeprecationWarning:RGBMatrixEmulator.*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
